@@ -10,6 +10,9 @@ What's New in Python 3.4.0 Alpha 1?
 Core and Builtins
 -----------------
 
+- Issue #10241: Clear extension module dict copies at interpreter shutdown.
+  Patch by Neil Schemenauer, minimally modified.
+
 - Issue #9035: ismount now recognises volumes mounted below a drive root
   on Windows. Original patch by Atsuo Ishimoto.
 
